--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@ HOST                     = localhost
 PORT                     = 8000
 
 # Database
-SQL_ENGINE               = django.db.backends.postgresql
-SQL_DATABASE             = postgres
-SQL_USER                 = postgres
-SQL_PASSWORD             = postgres
+SQL_ENGINE               = django.db.backends.mysql
+SQL_DATABASE             = ...
+SQL_USER                 = ...
+SQL_PASSWORD             = ...
 SQL_HOST                 = db
-SQL_PORT                 = 5432
-DATABASE                 = postgres
+SQL_PORT                 = 3306
+DATABASE                 = mysql
 
 # SMTP
 EMAIL_HOST_USER          = ...
