--- a/docker/.env.example
+++ b/docker/.env.example
@@ -12,13 +12,13 @@ PORT                     = 8000
 NGINX_PORT               = 80
 
 # Database
-SQL_ENGINE               = django.db.backends.postgresql
-SQL_DATABASE             = postgres
-SQL_USER                 = postgres
-SQL_PASSWORD             = postgres
+SQL_ENGINE               = django.db.backends.mysql
+SQL_DATABASE             = ...
+SQL_USER                 = ...
+SQL_PASSWORD             = ...
 SQL_HOST                 = db
-SQL_PORT                 = 5432
-DATABASE                 = postgres
+SQL_PORT                 = 3306
+DATABASE                 = mysql
 
 # SMTP
 EMAIL_HOST_USER          = ...
