--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ celery = {extras = ["redis"], version = "^5.2.7"}
 django-filter = "^23.2"
 pillow = "^9.5.0"
 flower = "^1.2.0"
+django-redis = "^5.3.0"
+requests = "^2.31.0"
+python-dotenv = "^1.0.0"
+mysqlclient = "1.4.6"
 
 
 [build-system]
