--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ flower = "^1.2.0"
 django-redis = "^5.3.0"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
-mysqlclient = "1.4.6"
+cryptography = "^41.0.3"
+pymysql = "^1.1.0"
 
 
 [build-system]
